hh~,我提交了东西哦

--- a/src/html/classes-new.jade
+++ b/src/html/classes-new.jade
@@ -52,4 +52,4 @@ block stage
         
 
 block bodyScripts
-  script(type="text/javascript", src="js/class-new.js")
+  script(type="text/javascript", src="js/classes-new.js")
